# socle

./: .ansible-lint  .envrc  .eslintignore  .eslintrc.js  .gitignore  .lintstagedrc  CHANGELOG.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  ansible.cfg  cluster-requirements.md  commitlint.config.cjs  deploycluster.md  eslint.config.mjs  install-gitops.yaml  install.yaml  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config.json  requirements.yml  uninstall.yaml  vars.example.yaml  versions.md
-/: Chart.yaml  values.yaml
-/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  (+2 more)
admin-tools/: check-available-updates.yaml  credentials-to-vault.yaml  deploy-opencds-mockoon-chart.sh  get-credentials.yaml  get-versions.yaml  infra-keycloak-admin-password-reset.yaml  infra-keycloak-user-unlock.yaml  install-requirements.yaml  install-zone-argocd.sh  install-zone-argocd.yaml  keycloak-admin-password-reset.yaml  keycloak-enforce-mfa.yml  keycloak-extract-users.yml  keycloak-user-unlock.yaml  migrate-argocd-applications.sh  migrate-argocd-spec-to-sql.sh  pgrestore.yaml
ci/: matrix-docker.json  release.sh
filter_plugins/: debug.py
gitops/: dso-app.yaml  dso-appset.yaml
observability/: Chart.yaml  values.yaml
operator/: Dockerfile  Makefile  PROJECT  watches.yaml
post-install/: 1.yaml  awx-oidc.yaml  console.yaml  gitlab-ci-catalog.yaml  gitlab-runner.yaml  gitlab.yaml  harbor.yaml  keycloak.yaml  pgdump.yaml  sonarqube.yaml  vault.yaml
samples/: conf-dso.yaml  start-kind.sh
shared_tasks/: vault-infra-token.yaml
(+878 files in other folders)
