[project]
name = "dso-socle"
version = "4.5.0"
description = "Outillage d'installation de la plateforme Cloud Pi Native"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.2.0",
    "hvac>=2.4.0",
    "jmespath>=1.0.1",
    "kubernetes>=35.0.0",
    "python-gitlab>=7.1.0",
    "pyyaml>=6.0.3",
    "urllib3<2.6.0", # https://github.com/kubernetes-client/python/issues/2477
]
